# tasks

./: .gitignore  README.md
.github/workflows/: api.yaml  api.yml  destroy.yml  ui.yml
services/tasks_api/: .flake8  docker-compose.yml  main.py  pyproject.toml  serverless.yml  store.py  tests.py
services/tasks_api/docker/dynamodb/: shared-local-instance.db
services/tasks_ui/: package-lock.json  package.json  serverless.yml
